Added typescript as dev dependency to project

--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "start": ""
   },
   "author": "Flo | shyrack",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "typescript": "^4.5.2"
+  }
 }
