--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@discordjs/builders": "^0.9.0",
+    "@discordjs/rest": "^0.1.0-canary.0",
+    "discord-api-types": "^0.25.2",
     "discord.js": "^13.3.1"
   }
 }
