--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Flo | shyrack",
   "license": "MIT",
   "devDependencies": {
+    "@types/lodash": "^4.14.177",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.0",
     "typescript": "^4.5.2"
@@ -21,6 +22,7 @@
     "@discordjs/builders": "^0.9.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "discord-api-types": "^0.25.2",
-    "discord.js": "^13.3.1"
+    "discord.js": "^13.3.1",
+    "lodash": "^4.17.21"
   }
 }
