--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/lodash": "^4.14.177",
+    "@types/yt-search": "^2.3.2",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.0",
     "typescript": "^4.5.2"
