--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "license": "MIT",
   "devDependencies": {
     "@types/lodash": "^4.14.177",
-    "@types/yt-search": "^2.3.2",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.0",
     "typescript": "^4.5.2"
@@ -25,8 +24,6 @@
     "discord-api-types": "^0.25.2",
     "discord.js": "^13.3.1",
     "lodash": "^4.17.21",
-    "yt-search": "^2.10.2",
-    "ytdl-core": "^4.9.1",
-    "ytdl-core-discord": "^1.3.1"
+    "play-dl": "^1.4.8"
   }
 }
