added engine and installed tweetnacl for play-dl

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "author": "Flo | shyrack",
   "license": "MIT",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "devDependencies": {
     "@types/lodash": "^4.14.177",
     "nodemon": "^2.0.15",
@@ -24,8 +27,8 @@
     "@discordjs/voice": "^0.7.5",
     "discord-api-types": "^0.25.2",
     "discord.js": "^13.3.1",
-    "ffmpeg-static": "^4.4.0",
     "lodash": "^4.17.21",
-    "play-dl": "^1.4.8"
+    "play-dl": "^1.5.0",
+    "tweetnacl": "^1.0.3"
   }
 }
