--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.177",
+    "@types/yt-search": "^2.3.2",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.0",
     "typescript": "^4.5.2"
@@ -31,7 +32,10 @@
     "ffmpeg-static": "^4.4.0",
     "lodash": "^4.17.21",
     "opusscript": "^0.0.8",
-    "play-dl": "^1.6.1",
-    "tweetnacl": "^1.0.3"
+    "tweetnacl": "^1.0.3",
+    "yt-search": "^2.10.2",
+    "ytdl-core": "^4.9.2",
+    "ytdl-core-discord": "^1.3.1",
+    "ytpl": "^2.2.3"
   }
 }
